added assignment zips to giignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 09-Selector-Exercise-Starter.zip
 09_Selector_Exercise_Starter
+READ.md
+07-Image-Blog-1.zip	
+08-Image-Blog-2.zip	
+07-Image-Blog-1.zip
+07_ImageBlog1 2/
+07_ImageBlog1/
+08-Image-Blog-2.zip
+08_ImageBlog2/
